Messing w hero template

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="My Business — short tagline about what you do."/>
   <title>My Business</title>
+  <img src="images/SecuriStop_logo.jpg" alt="SecuriStop Logo">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -30,11 +31,18 @@
   </header>
 
   <main>
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="container">
         <h1>We help <span class="accent">you</span> get results.</h1>
         <p class="lead">Short one-line description of your product or service. Clear, concise, benefit-led.</p>
         <a class="btn" href="contact.html">Get in touch</a>
+      </div>
+    </section> -->
+    <section class="hero">
+    <img src="images/banner.webp" alt="Business banner" class="hero-image">
+      <div class="hero-text">
+        <h1>Welcome to My Business</h1>
+        <p>Your trusted partner in quality and service.</p>
       </div>
     </section>
 
