Messing w hero template

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="My Business — short tagline about what you do."/>
   <title>My Business</title>
-  <img src="images/SecuriStop_logo.jpg" alt="SecuriStop Logo">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -16,7 +15,9 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">My Business</a>
+      <a class="logo" href="index.html">
+        <img src="images/logo_transparent.png" alt="SecuriStop Logo">
+      </a>
 
       <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
         ☰
