Messing w hero template pt3

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
       </div>
     </section> -->
     <section class="hero">
-    <img src="images/banner.webp" alt="Business banner" class="hero-image">
-      <div class="hero-text">
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
         <h1>Welcome to My Business</h1>
-        <p>Your trusted partner in quality and service.</p>
+        <p>Excellence in service and quality products since 2025</p>
+        <a href="contact.html" class="hero-btn">Get in Touch</a>
       </div>
     </section>
 
