--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,15 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">My Business</a>
-      <nav class="nav">
+      <a class="logo" href="index.html">
+        <img src="images/logo_transparent.png" alt="SecuriStop Logo">
+      </a>
+
+      <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
+        ☰
+      </button>
+
+      <nav id="primary-nav" class="nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
