Homepage additions, new content format and purpose section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="My Business — short tagline about what you do."/>
-  <title>My Business</title>
+  <meta name="description" content="SecuriStop — Committed to detering and penalizing school bus traffic violations"/>
+  <title>SecuriStop</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -35,8 +35,8 @@
     <section class="hero">
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h1>Welcome to My Business</h1>
-        <p>Excellence in service and quality products since 2025</p>
+        <h1>Welcome to SecuriStop</h1>
+        <p>Committed to detering and penalizing school bus traffic violations</p>
         <a href="contact.html" class="hero-btn">Get in Touch</a>
       </div>
     </section>
@@ -44,24 +44,57 @@
     <section class="features">
       <div class="container grid-3">
         <article>
-          <h3>Service One</h3>
+          <h3>Deterrence</h3>
           <p>Short description of service one — what it does and why it matters.</p>
         </article>
         <article>
-          <h3>Service Two</h3>
+          <h3>ML-Enhanced Event Capture</h3>
           <p>Short description of service two — value proposition in one or two lines.</p>
         </article>
         <article>
-          <h3>Service Three</h3>
+          <h3>Penalization</h3>
           <p>Short description. Keep it focused and scannable.</p>
         </article>
+      </div>
+    </section>
+    
+    <section id="strengths" class="strengths-section">
+      <h2>Our Strengths</h2>
+      <div class="strengths-grid">
+        <div class="strength-bubble strength1">
+          <h3>Deterrence</h3>
+          <p>We create cutting-edge solutions that move industries forward.</p>
+        </div>
+        <div class="strength-bubble strength2">
+          <h3>ML-Enhanced Event Capture</h3>
+          <p>Our customers trust us to deliver consistent and dependable results.</p>
+        </div>
+        <div class="strength-bubble strength3">
+          <h3>Collaboration with Law Enforcement</h3>
+          <p>We work hand-in-hand with partners to achieve shared success.</p>
+        </div>
+        <div class="strength-bubble strength4">
+          <h3>Penalization</h3>
+          <p>Our actions are driven by a responsibility to future generations.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="purpose" class="purpose-section">
+      <div class="purpose-overlay">
+        <div class="purpose-content">
+          <h2>Our Purpose</h2>
+          <p>We serve our customers at their highest point of need, working behind the scenes to provide technology solutions that make mobility safer and easier.</p>
+          <p>We believe our actions have the ability to move the world. Our teams are driven by a relentless pursuit of tomorrow’s solutions while solving today’s challenges.</p>
+          <p>We earn trust by solving problems the right way—every time. The way we work is defined by a set of <strong>core values</strong>.</p>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> My Business · <a href="privacy.html">Privacy</a></p>
+      <p>&copy; <span id="year"></span> SecuriStop · <a href="privacy.html">Privacy</a></p>
     </div>
   </footer>
 
