--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="SecuriStop — Committed to detering and penalizing school bus traffic violations"/>
+  <meta name="description" content="SecuriStop — Committed to deterring and penalizing school bus traffic violations"/>
   <title>SecuriStop</title>
 
   <!-- Google Font -->
@@ -35,13 +35,14 @@
     <section class="hero">
       <div class="hero-overlay"></div>
       <div class="hero-content">
-        <h1>Welcome to SecuriStop</h1>
-        <p>Committed to detering and penalizing school bus traffic violations</p>
+        <h1>Deterrence that our kids can depend on</h1>
+        <!-- <p>Committed to detering and penalizing school bus traffic violations</p> -->
+         <p>Is your local legislature ready to start getting more serious about school bus safety?</p>
         <a href="contact.html" class="hero-btn">Get in Touch</a>
       </div>
     </section>
 
-    <section class="features">
+    <!-- <section class="features">
       <div class="container grid-3">
         <article>
           <h3>Deterrence</h3>
@@ -56,26 +57,26 @@
           <p>Short description. Keep it focused and scannable.</p>
         </article>
       </div>
-    </section>
+    </section> -->
     
     <section id="strengths" class="strengths-section">
       <h2>Our Strengths</h2>
       <div class="strengths-grid">
         <div class="strength-bubble strength1">
           <h3>Deterrence</h3>
-          <p>We create cutting-edge solutions that move industries forward.</p>
+          <p>We work with local legislatures and school districts to deter those from violating traffic laws.</p>
         </div>
         <div class="strength-bubble strength2">
           <h3>ML-Enhanced Event Capture</h3>
-          <p>Our customers trust us to deliver consistent and dependable results.</p>
+          <p>We use the most cutting edge techniques for the lowest cost to the taxpayer.</p>
         </div>
         <div class="strength-bubble strength3">
           <h3>Collaboration with Law Enforcement</h3>
-          <p>We work hand-in-hand with partners to achieve shared success.</p>
+          <p>We work hand-in-hand with partners in law enforcement to ensure accuracy.</p>
         </div>
         <div class="strength-bubble strength4">
           <h3>Penalization</h3>
-          <p>Our actions are driven by a responsibility to future generations.</p>
+          <p>We directly ticket those who violate traffic laws, ensuring fair justice is brought to those who endanger our children.</p>
         </div>
       </div>
     </section>
@@ -84,8 +85,8 @@
       <div class="purpose-overlay">
         <div class="purpose-content">
           <h2>Our Purpose</h2>
-          <p>We serve our customers at their highest point of need, working behind the scenes to provide technology solutions that make mobility safer and easier.</p>
-          <p>We believe our actions have the ability to move the world. Our teams are driven by a relentless pursuit of tomorrow’s solutions while solving today’s challenges.</p>
+          <h3>At SecuriStop, we strive to end the wide-spread issue of school bus stop sign violations through deterrence and the use of advanced cutting-edge methods.</h3>
+          <p>We believe that <strong>smart deterrence can prevent tragedy</strong>. Our team is driven to put an end to this issue because we're ___.</p>
           <p>We earn trust by solving problems the right way—every time. The way we work is defined by a set of <strong>core values</strong>.</p>
         </div>
       </div>
