Changes to homescreen and addition of privacy page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images/favicon.png" sizes="32x32" />
+  <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <img src="images/logo_transparent.png" alt="SecuriStop Logo">
+        <img src="images/logo_transparent_color4.png" alt="SecuriStop Logo">
       </a>
 
       <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
