Mostly Tweaks to About page

--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="About SecuriStop"/>
   <title>About · My Business</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
+
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <img src="images/logo_transparent.png" alt="SecuriStop Logo">
+        <img src="images/logo_transparent_color4.png" alt="SecuriStop Logo">
       </a>
 
       <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
@@ -26,17 +29,30 @@
     </div>
   </header>
 
-  <main class="container">
-    <h1>About Us</h1>
-    <p>Write a short paragraph about your business — history, mission, and what sets you apart.</p>
+  <!-- MAIN CONTENT BELOW -->
 
-    <h2>Our approach</h2>
-    <p>Explain your process, values, or how you work with customers.</p>
+  <main class="container about-section">
+    <h1>Taking a Technology-Driven Approach to Safety and Deterrence</h1>
+    <p>
+      We believe our technology has the power to deter school bus traffic violations before they happen. 
+      Our team is made up of forward-thinking technologists and experienced leaders, 
+      united by a shared mission: protecting children across the country by making roads safer for every school bus.
+    </p>
+
+    <h2>In a nutshell, SecuriStop is built to deliver on these key objectives:</h2>
+
+    <ol class="styled-list">
+      <li><strong>Prevent Violations:</strong> Deploy intelligent detection systems to discourage and document illegal school bus passing.</li>
+      <li><strong>Support Law Enforcement:</strong> Provide accurate, timely data to assist enforcement agencies in addressing violations effectively.</li>
+      <li><strong>Enhance Community Safety:</strong> Increase driver accountability through technology that prioritizes child safety.</li>
+      <li><strong>Promote Awareness:</strong> Drive long-term behavioral change by making safety visible and measurable.</li>
+    </ol>
   </main>
 
+  <!-- FOOTER BELOW -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> My Business</p>
+      <p>&copy; <span id="year"></span> SecuriStop · <a href="privacy.html">Privacy</a></p>
     </div>
   </footer>
 
