Privacy page update and tech exploded view

--- a/privacy.html
+++ b/privacy.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About · My Business</title>
+  <meta name="description" content="Privacy at SecuriStop"/>
+  <title>Privacy · SecuriStop</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
+
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <img src="images/logo_transparent.png" alt="SecuriStop Logo">
+        <img src="images/logo_transparent_color4.png" alt="SecuriStop Logo">
       </a>
 
       <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
@@ -26,17 +29,20 @@
     </div>
   </header>
 
-  <main class="container">
-    <h1>About Us</h1>
-    <p>Write a short paragraph about your business — history, mission, and what sets you apart.</p>
+  <!-- MAIN CONTENT BELOW -->
 
-    <h2>Our approach</h2>
-    <p>Explain your process, values, or how you work with customers.</p>
+  <main class="container">
+    <h1>Commitment to Your Privacy</h1>
+    <p>Write a short paragraph about your Privacy.</p>
+
+    <h2>How we safeguard your Data</h2>
+    <p>Explain privacy process.</p>
   </main>
 
+  <!-- FOOTER BELOW -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> My Business</p>
+      <p>&copy; <span id="year"></span> SecuriStop · <a href="privacy.html">Privacy</a></p>
     </div>
   </footer>
 
