--- a/about.html
+++ b/about.html
@@ -48,6 +48,15 @@
       <li><strong>Promote Awareness:</strong> Drive long-term behavioral change by making safety visible and measurable.</li>
     </ol>
   </main>
+  
+  <section class="tech-hero">
+    <div class="tech-hero-overlay">
+      <h2>Learn more about our system &gt;</h2>
+    </div>
+    <a href="Technology.html">
+      <img src="images/tech-exploded.jpg" alt="Exploded view of SecuriStop system">
+    </a>
+  </section>
 
   <!-- FOOTER BELOW -->
   <footer class="site-footer">
@@ -71,6 +80,6 @@
     const listItems = document.querySelectorAll('.styled-list li');
     listItems.forEach((item) => observer.observe(item));
   </script>
-  
+
 </body>
 </html>
