tweak exploded view - holder image

--- a/about.html
+++ b/about.html
@@ -48,13 +48,13 @@
       <li><strong>Promote Awareness:</strong> Drive long-term behavioral change by making safety visible and measurable.</li>
     </ol>
   </main>
-  
+
   <section class="tech-hero">
     <div class="tech-hero-overlay">
       <h2>Learn more about our system &gt;</h2>
     </div>
     <a href="Technology.html">
-      <img src="images/tech-exploded.jpg" alt="Exploded view of SecuriStop system">
+      <img src="images/purpose-image.jpg" alt="Exploded view of SecuriStop system">
     </a>
   </section>
 
