--- a/about.html
+++ b/about.html
@@ -21,9 +21,21 @@
         ☰
       </button>
 
-      <nav id="primary-nav" class="nav">
+      <!-- <nav id="primary-nav" class="nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav> -->
+      <nav class="nav">
+        <a href="index.html">Home</a>
+
+        <div class="dropdown">
+          <a href="about.html" class="dropbtn">About</a>
+          <ul class="dropdown-content">
+            <li><a href="Technology.html">Technology</a></li>
+          </ul>
+        </div>
+
         <a href="contact.html">Contact</a>
       </nav>
     </div>
