Exploded view, edit to header on about and contact

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
       <h2>Learn more about our system &gt;</h2>
     </div>
     <a href="Technology.html">
-      <img src="images/purpose-image.jpg" alt="Exploded view of SecuriStop system">
+      <img src="images/exploded-view.jpg" alt="Exploded view of SecuriStop system"> 
     </a>
   </section>
 
