--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img src="images/logo.png" alt="My Business Logo" style="height:40px;">
+        <img src="images/logo_transparent_color4.png" alt="My Business Logo" style="height:40px;">
       </a>
 
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
@@ -44,7 +44,7 @@
         <div class="dropdown">
           <a href="about.html" class="dropbtn" aria-haspopup="true" aria-expanded="false">About</a>
           <ul class="dropdown-content" aria-label="About sub-menu">
-            <li><a href="Technology.html">Technology</a></li>
+            <li><a href="technology.html">Technology</a></li>
           </ul>
         </div>
 
