small technology page tweaks

--- a/technology.html
+++ b/technology.html
@@ -10,6 +10,8 @@
   <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
 <body>
+  
+  <!-- HEADER CONTENT BELOW -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
@@ -33,39 +35,19 @@
     </div>
   </header>
 
+  <!-- MAIN CONTENT BELOW -->
   <main class="container narrow">
-    <h1>Contact</h1>
-    <p>If you'd like a quick email: <a href="mailto:hello@yourdomain.com">hello@yourdomain.com</a></p>
+    <h1>How Our Technology Works</h1>
+    <p>Technology is comprised of</p>
 
-    <!-- Simple contact form using Formspree (recommended for static sites)
-         1) Sign up at https://formspree.io and get your form endpoint
-         2) Replace "https://formspree.io/f/your-id" with the endpoint they give you
-    -->
-    <!-- <form action="https://formspree.io/f/your-id" method="POST">
-      <label>
-        Your name
-        <input type="text" name="name" required>
-      </label>
-      <label>
-        Email
-        <input type="email" name="_replyto" required>
-      </label>
-      <label>
-        Message
-        <textarea name="message" rows="6" required></textarea>
-      </label>
-      <button type="submit" class="btn">Send</button>
-    </form> -->
-
-    <!-- Fallback: mailto link -->
-    <p>Or use the mailto link above to send us a message directly from your email client.</p>
   </main>
 
+  <!-- FOOTER BELOW -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> My Business</p>
+      <p>&copy; <span id="year"></span> SecuriStop · <a href="privacy.html">Privacy</a></p>
     </div>
   </footer>
-
+  
   <script src="js/script.js"></script>
 </body>
