--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
         <img src="images/logo_transparent_color4.png" alt="My Business Logo" style="height:40px;">
       </a>
 
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
+        ☰
+      </button>
 
       <nav class="nav" aria-label="Main navigation">
         <a href="index.html">Home</a>
