header standard completed. propagated across the pages

--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,16 @@
   <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
 <body>
+  <!-- HEADER BAR -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
         <img src="images/logo_transparent_color4.png" alt="My Business Logo" style="height:40px;">
       </a>
 
-      <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
+        ☰
+      </button>
 
       <nav class="nav" aria-label="Main navigation">
         <a href="index.html">Home</a>
