added file and page for meet the team

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
           <a href="about.html" class="dropbtn" aria-haspopup="true" aria-expanded="false">About</a>
           <ul class="dropdown-content" aria-label="About sub-menu">
             <li><a href="technology.html">Technology</a></li>
+            <li><a href="ourteam.html">Our Team</a></li>
           </ul>
         </div>
 
