updated team photos

--- a/ourteam.html
+++ b/ourteam.html
@@ -44,9 +44,9 @@
 
   <section class="team-section">
     <div class="team-member">
-      <img src="images/founder1.jpg" alt="Co-founder 1" class="headshot" />
+      <img src="images/jorge-canovas-headshot.jpg" alt="Jorge Canovas" class="headshot" />
       <div class="bio">
-        <h2>Co-founder 1</h2>
+        <h2>Jorge Canovas, CEO & Co-founder</h2>
         <p>
           Co-founder 1 is an engineer and entrepreneur with a background in
           intelligent systems and product development. Passionate about
@@ -56,9 +56,9 @@
     </div>
 
     <div class="team-member reverse">
-      <img src="images/founder2.jpg" alt="Co-founder 2" class="headshot" />
+      <img src="images/nicholas-canovas-headshot.jpg" alt="Nick Canovas" class="headshot" />
       <div class="bio">
-        <h2>Co-founder 2</h2>
+        <h2>Nick Canovas, CTO & Co-founder</h2>
         <p>
           Co-founder 2 brings expertise in embedded systems and operations.
           With years of experience in systems integration, they ensure SecuriStop
