tech page new layout

--- a/technology.html
+++ b/technology.html
@@ -6,10 +6,10 @@
   <meta name="description" content="SecuriStop Technology"/>
   <title>Technology · SecuriStop</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/technology.css">
   <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
-<body>
+<body class="tech-page">
   <!-- HEADER BAR -->
   <header class="site-header">
     <div class="container header-inner">
@@ -37,12 +37,103 @@
     </div>
   </header>
 
-  <!-- MAIN CONTENT BELOW -->
-  <main class="container narrow">
-    <h1>How Our Technology Works</h1>
-    <p>Technology is comprised of</p>
+  <!-- optional: include your site header/nav here -->
+
+  <header class="tech-header">
+    <div class="container">
+      <h1>How our system captures license-plate data</h1>
+      <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
+    </div>
+  </header>
+
+  <main class="container tech-steps">
+
+    <!-- STEP 1 (image left, text right, number on right) -->
+    <section class="tech-step">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/tech-step1.jpg" alt="Camera captures vehicle" />
+        </figure>
+
+        <div class="step-card">
+          <h2>1 — Camera detection & capture</h2>
+          <p>
+            High-speed camera sensors mounted at the bus stop continuously monitor the approach lane. When an object enters the detection zone, the system triggers a short, high-resolution burst capture (multiple frames) to ensure at least one frame is free of motion blur. Exposure, shutter timing, and IR illumination are adjusted dynamically for day/night conditions.
+          </p>
+          <p><strong>Hardware:</strong> Global-shutter camera, IR illuminator, low-latency capture buffer.</p>
+        </div>
+      </div>
+      <div class="step-number">1.</div>
+    </section>
+
+    <!-- STEP 2 (image right, text left, number on left) -->
+    <section class="tech-step reverse">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/tech-step2.jpg" alt="Image processing and cropping" />
+        </figure>
+
+        <div class="step-card">
+          <h2>2 — Preprocessing & plate localization</h2>
+          <p>
+            Captured frames are run through a preprocessing pipeline (de-noise, contrast stretch, geometric correction). A lightweight object detection model isolates vehicle and plate regions, producing tight crops for downstream OCR. Multiple candidate crops are kept and scored by quality metrics (sharpness, occlusion, angle).
+          </p>
+          <p><strong>Software:</strong> Lightweight CNN detector, GPU/edge-accelerated preprocessing.</p>
+        </div>
+      </div>
+      <div class="step-number">2.</div>
+    </section>
+
+    <!-- STEP 3 (repeat pattern) -->
+    <section class="tech-step">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/tech-step3.jpg" alt="Optical character recognition" />
+        </figure>
+
+        <div class="step-card">
+          <h2>3 — OCR & confidence scoring</h2>
+          <p>
+            Crops are sent to an OCR engine optimized for variable fonts and partial occlusion. Multiple hypotheses are generated and ranked by confidence. Post-processing applies regional plate format rules and fuzzy matching to increase accuracy and reduce false positives.
+          </p>
+        </div>
+      </div>
+      <div class="step-number">3.</div>
+    </section>
+
+    <section class="tech-step reverse">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/tech-step4.jpg" alt="Validation, timestamping, and delivery" />
+        </figure>
+
+        <div class="step-card">
+          <h2>4 — Validation, timestamping & delivery</h2>
+          <p>
+            Verified plates are timestamped, geo-tagged, and packaged with evidence frames. Secure delivery to enforcement endpoints occurs over TLS; optionally batched to meet local retention and privacy policies. Audit logs and chain-of-custody metadata are included for legal acceptability.
+          </p>
+        </div>
+      </div>
+      <div class="step-number">4.</div>
+    </section>
 
   </main>
+
+  <!-- Scroll-in JS -->
+  <script>
+    (function () {
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('in-view');
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.12 });
+
+      document.querySelectorAll('.tech-step').forEach(s => observer.observe(s));
+    })();
+  </script>
 
   <!-- FOOTER BELOW -->
   <footer class="site-footer">
