--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,10 @@
     <p>Or use the mailto link above to send us a message directly from your email client.</p>
   </main>
 
+  <!-- FOOTER BELOW -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> My Business</p>
+      <p>&copy; <span id="year"></span> SecuriStop · <a href="privacy.html">Privacy</a></p>
     </div>
   </footer>
 
