--- a/technology.html
+++ b/technology.html
@@ -39,12 +39,12 @@
 
   <!-- optional: include your site header/nav here -->
 
-  <header class="tech-header">
+  <section class="tech-header">
     <div class="container">
       <h1>How our system captures license-plate data</h1>
       <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
     </div>
-  </header>
+  </section>
 
   <main class="container tech-steps">
 
