--- a/technology.html
+++ b/technology.html
@@ -52,7 +52,7 @@
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/tech-step1.jpg" alt="Camera captures vehicle" />
+          <img src="images/purpose-image.jpg" alt="Camera captures vehicle" />
         </figure>
 
         <div class="step-card">
@@ -70,7 +70,7 @@
     <section class="tech-step reverse">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/tech-step2.jpg" alt="Image processing and cropping" />
+          <img src="images/purpose-image.jpg" alt="Image processing and cropping" />
         </figure>
 
         <div class="step-card">
@@ -88,7 +88,7 @@
     <section class="tech-step">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/tech-step3.jpg" alt="Optical character recognition" />
+          <img src="images/purpose-image.jpg" alt="Optical character recognition" />
         </figure>
 
         <div class="step-card">
@@ -104,7 +104,7 @@
     <section class="tech-step reverse">
       <div class="step-inner">
         <figure class="step-media">
-          <img src="images/tech-step4.jpg" alt="Validation, timestamping, and delivery" />
+          <img src="images/purpose-image.jpg" alt="Validation, timestamping, and delivery" />
         </figure>
 
         <div class="step-card">
