fix link on about from tech exploded view

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     <div class="tech-hero-overlay">
       <h2>Learn more about our system &gt;</h2>
     </div>
-    <a href="Technology.html">
+    <a href="technology.html">
       <img src="images/exploded-view.jpg" alt="Exploded view of SecuriStop system"> 
     </a>
   </section>
