--- a/technology.html
+++ b/technology.html
@@ -37,14 +37,12 @@
     </div>
   </header>
 
-  <main class="container tech-steps">
-    <section class="tech-header">
-      <div class="container">
-        <h1>How our system captures license-plate data</h1>
-        <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
-      </div>
-    </section>
+  <section class="container about-section">
+      <h1>How our system captures license-plate data</h1>
+      <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
+  </section>
 
+  <main class="container tech-steps">
     <!-- STEP 1 (image left, text right, number on right) -->
     <section class="tech-step">
       <div class="step-inner">
