--- a/technology.html
+++ b/technology.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/technology.css">
   <link rel="icon" href="images/logo_favicon.png" sizes="32x32" />
 </head>
+
 <body class="tech-page">
   <!-- HEADER BAR -->
   <header class="site-header">
@@ -37,9 +38,12 @@
     </div>
   </header>
 
-  <section class="container about-section">
+  <!-- PAGE INTRO -->
+  <section class="tech-intro">
+    <div class="container">
       <h1>How our system captures license-plate data</h1>
       <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
+    </div>
   </section>
 
   <main class="container tech-steps">
