Small wording change to technology

--- a/technology.html
+++ b/technology.html
@@ -41,7 +41,7 @@
   <!-- PAGE INTRO -->
   <section class="tech-intro">
     <div class="container">
-      <h1>How our system captures license-plate data</h1>
+      <h1>How our system deters school bus traffic violations</h1>
       <p class="sub">A step-by-step technical flow of detection, capture, validation, and delivery.</p>
     </div>
   </section>
