Button on about page fix for mobile

--- a/about.html
+++ b/about.html
@@ -58,14 +58,12 @@
     </ol>
   </main>
 
-  <section class="tech-hero">
+  <a href="technology.html" class="tech-hero">
     <div class="tech-hero-overlay">
       <h2>Learn more about our system &gt;</h2>
     </div>
-    <a href="technology.html">
-      <img src="images/exploded-view.jpg" alt="Exploded view of SecuriStop system"> 
-    </a>
-  </section>
+    <img src="images/exploded-view.jpg" alt="Exploded view of SecuriStop system">
+  </a>
 
   <!-- FOOTER BELOW -->
   <footer class="site-footer">
