new mission and purpose statements

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <div class="purpose-overlay">
         <div class="purpose-content">
           <h2>Our Purpose</h2>
-          <h3>At SecuriStop, we strive to end the wide-spread issue of school bus stop sign violations through deterrence and the use of advanced cutting-edge methods.</h3>
-          <p>We believe that <strong>smart deterrence can prevent tragedy</strong>. Our team is driven to put an end to this issue because we're ___.</p>
-          <p>We earn trust by solving problems the right way—every time. The way we work is defined by a set of <strong>core values</strong>.</p>
+          <!-- <h3>At SecuriStop, we strive to end the wide-spread issue of school bus stop sign violations through deterrence and the use of advanced cutting-edge methods.</h3> -->
+          <h3>Securistop exists to protect children by delivering the most accurate, secure, and enforceable stop-arm safety system in the nation. Our mission is to support law enforcement with reliable, court-ready evidence and to deter violations before they become tragedies.</h3>
+          <p>Securistop was founded to stop <strong>preventable</strong> harm. We build enforcement technology that gives officers the tools they need to hold dangerous drivers accountable and to ensure every school bus is protected with <strong>secure, verifiable, and defensible evidence</strong>.
         </div>
       </div>
     </section>
