--- a/technology.html
+++ b/technology.html
@@ -55,14 +55,13 @@
         </figure>
 
         <div class="step-card">
-          <h2>1 — Camera detection & capture</h2>
+          <h2><strong>1.</strong> Camera Detection & Capture</h2>
           <p>
             High-speed camera sensors mounted on the exterior of the bus monitor the surrounding traffic during all bus stops with passengers exiting. When an object enters the detection zone, the system triggers a short, high-resolution burst capture to ensure at clear imaging. Exposure, shutter timing, and IR illumination are adjusted dynamically for day/night conditions.
           </p>
           <p><strong>Hardware:</strong> Global-shutter camera, IR illuminator, low-latency capture buffer.</p>
         </div>
       </div>
-      <div class="step-number">1.</div>
     </section>
 
     <!-- STEP 2 (image right, text left, number on left) -->
@@ -73,14 +72,13 @@
         </figure>
 
         <div class="step-card">
-          <h2>2 — Preprocessing & plate localization</h2>
+          <h2><strong>2.</strong> Preprocessing & Plate Localization</h2>
           <p>
             Captured frames are run through a preprocessing pipeline. A lightweight object detection model isolates vehicle and plate regions. Multiple candidate crops are kept and scored by quality metrics.
           </p>
           <p><strong>Software:</strong> Lightweight CNN detector, GPU/edge-accelerated preprocessing.</p>
         </div>
       </div>
-      <div class="step-number">2.</div>
     </section>
 
     <!-- STEP 3 (repeat pattern) -->
@@ -91,13 +89,12 @@
         </figure>
 
         <div class="step-card">
-          <h2>3 — OCR & confidence scoring</h2>
+          <h2><strong>3.</strong> OCR & Confidence Scoring</h2>
           <p>
             Crops are sent to an OCR engine optimized for variable fonts and partial occlusion. Multiple hypotheses are generated and ranked by confidence. Post-processing applies multiple AI-enhanced methods to increase accuracy and eliminate false positives.
           </p>
         </div>
       </div>
-      <div class="step-number">3.</div>
     </section>
 
     <section class="tech-step reverse">
@@ -107,13 +104,42 @@
         </figure>
 
         <div class="step-card">
-          <h2>4 — Validation, timestamping & delivery</h2>
+          <h2><strong>4.</strong> Validation, Timestamping & Delivery</h2>
           <p>
             Verified plates are timestamped, geo-tagged, and packaged with evidence frames. Secure delivery of violation packages to enforcement endpoints occurs over TLS; optionally batched to meet local retention and privacy policies. Audit logs and chain-of-custody metadata are included for legal acceptability.
           </p>
         </div>
       </div>
-      <!--<div class="step-number">4.</div> -->
+    </section>
+
+    <section class="tech-step reverse">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/step_4.png" alt="Police Mobile App" />
+        </figure>
+
+        <div class="step-card">
+          <h2><strong>5.</strong> Ticket Determination Mobile Application</h2>
+          <p>
+            Verified law enforcement personnel, including off-duty officers, securely receive and review incident packages to determine appropriate ticketing outcomes. The <strong>SecuriStop Mobile Application</strong>, developed in-house, facilitates this process by streamlining verification, evidence review, and decision-making for authorized police officers.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="tech-step reverse">
+      <div class="step-inner">
+        <figure class="step-media">
+          <img src="images/payment_processing.jpg" alt="Payment Processing Service" />
+        </figure>
+
+        <div class="step-card">
+          <h2><strong>5.</strong> Payment Processing</h2>
+          <p>
+            SecuriStop can optionally provide comprehensive payment processing capabilities, streamlining operations and reducing the administrative burden on government websites and personnel. Our goal is to deliver a seamless, end-to-end image-to-payment solution that enables efficient citation management without placing additional strain on government resources.
+          </p>
+        </div>
+      </div>
     </section>
 
   </main>
