link error in about

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     <div class="tech-hero-overlay">
       <h2>Learn more about our system &gt;</h2>
     </div>
-    <img src="images/full_product_image.jpg" alt="Exploded view of SecuriStop system">
+    <img src="images/full_product_image.png" alt="Exploded view of SecuriStop system">
   </a>
 
   <!-- FOOTER BELOW -->
